tests/baselines/reference/restElementWithAssignmentPattern2.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern2.ts(2,1): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern2.ts(2,18): error TS2459: Type '任意[]' has no property 'b' and no string index signature.


==== tests/cases/conformance/es6/destructuring/restElementWithAssignmentPattern2.ts (2 errors) ====
    var a: string, b: number;
    [...{ 0: a = "", b }] = ["", 1];
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                     ~
!!! error TS2459: Type '任意[]' has no property 'b' and no string index signature.